tests/snapshots/integration__integration_tests__jj__jj_step_commit_show_prompt.snap
---
source: tests/integration_tests/jj.rs
info:
  program: wt
  args:
    - step
    - commit
    - "--show-prompt"
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PSModulePath: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----
Write a commit message for the staged changes below.

<format>
- Subject line under 50 chars
- For [CHANGE_ID_SHORT] changes, add a blank line then a body paragraph explaining the change
- Output only the commit message, no quotes or code blocks
</format>

<style>
- Imperative mood: "Add feature" not "Added feature"
- Match recent commit style ([CHANGE_ID] commits if used)
- Describe the change, not the intent or benefit
</style>

<[CHANGE_ID_SHORT]>
prompt.txt | 1 +
1 file changed, 1 insertion(+), 0 deletions(-)

</[CHANGE_ID_SHORT]>

<diff>
Added regular file prompt.txt:
        1: content

</diff>

<context>
Branch: default
<recent_commits>
- Initial commit
</recent_commits>
</context>

----- stderr -----
